# openai_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  generate.sh
backends/llama/: llamaServer.cpp  llamaServer.h
cmake/: clang_rocm_toolchain.cmake
models/: open_llama_3b.json
oais/: json.h  main.cpp  modelDefinition.cpp  modelDefinition.h  modelServer.cpp  modelServer.h  serverOptions.cpp  serverOptions.h  utils.h
oais/interfaces/: llamaModel.cpp  llamaModel.h
oais/json/: builder.cpp  bulder.h
